# autoguardrails

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  eval_suite.jsonl  judge_prompt.md  policy.md  program.md  pyproject.toml  results.tsv  run_autoguardrails.sh
.cla-signatures/v1/: cla.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  dep-scan.yml  license-check.yml  release.yml
autoguardrails/: README.md  __init__.py  __main__.py  config.py  eval_runner.py  injection_detector.py  judge.py  loop.py  model_adapter.py  regex_detector.py  schema.py
docs/: PR-regex-cascade-detector.md
tests/: README.md  test_eval_runner.py  test_harness.py  test_injection_detector.py  test_loop.py  test_regex_detector.py
